// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockList.vue Should display pending blocks 1`] = `
<div class="v-data-table v-data-table--has-bottom theme--light">
  <div class="v-data-table__wrapper">
    <table>
      <colgroup>
        <col class="">
        <col class="">
        <col class="">
        <col class="">
      </colgroup>
      <thead class="v-data-table-header">
        <tr>
          <th role="columnheader" scope="col" aria-label="Block: Sorted descending. Activate to sort ascending." aria-sort="descending" class="text-start sortable active desc"><span>Block</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="Mined On: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Mined On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="Gas Used" class="text-start"><span>Gas Used</span></th>
          <th role="columnheader" scope="col" aria-label="Transaction Count" class="text-start"><span>Transaction Count</span></th>
        </tr>
      </thead>
      <tbody>
        <tr class="isSyncing">
          <td class="text-start">
            <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular mr-2 v-progress-circular--visible v-progress-circular--indeterminate primary--text" style="height: 16px; width: 16px;" aria-haspopup="true" aria-expanded="false"><svg xmlns="http://www.w3.org/2000/svg" viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715" style="transform: rotate(0deg);">
                <circle fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle>
              </svg>
              <div class="v-progress-circular__info"></div>
            </div><span class="v-tooltip v-tooltip--top"><!----></span> <a href="/block/2" class="">2</a>
          </td>
          <td class="text-start">
            <div class="my-2 text-left">
              05/06 7:11:26 PM<br> <small>3 months ago</small></div>
          </td>
          <td class="text-start">
            200000
          </td>
          <td class="text-start">
            transactions
          </td>
        </tr>
        <tr class="">
          <td class="text-start"><span class="v-tooltip v-tooltip--top"><!----></span> <a href="/block/1" class="">1</a></td>
          <td class="text-start">
            <div class="my-2 text-left">
              05/06 7:11:26 PM<br> <small>3 months ago</small></div>
          </td>
          <td class="text-start">
            100000
          </td>
          <td class="text-start">
            transactions
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div class="v-data-footer">
    <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
        <div class="v-input__control">
          <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-11" class="v-input__slot">
            <div class="v-select__slot">
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-11" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
              </div><input type="hidden" value="10">
            </div>
            <div class="v-menu">
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-data-footer__pagination">1-2 of 2</div>
    <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
    <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
  </div>
</div>
`;

exports[`BlockList.vue Should not show blocks count 1`] = `
<div class="v-data-table v-data-table--has-bottom theme--light">
  <div class="v-data-table__wrapper">
    <table>
      <colgroup>
        <col class="">
        <col class="">
        <col class="">
        <col class="">
      </colgroup>
      <thead class="v-data-table-header">
        <tr>
          <th role="columnheader" scope="col" aria-label="Block: Sorted descending. Activate to sort ascending." aria-sort="descending" class="text-start sortable active desc"><span>Block</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="Mined On: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Mined On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="Gas Used" class="text-start"><span>Gas Used</span></th>
          <th role="columnheader" scope="col" aria-label="Transaction Count" class="text-start"><span>Transaction Count</span></th>
        </tr>
      </thead>
      <tbody>
        <tr class="">
          <td class="text-start"><span class="v-tooltip v-tooltip--top"><!----></span> <a href="/block/2" class="">2</a></td>
          <td class="text-start">
            <div class="my-2 text-left">
              05/06 7:11:26 PM<br> <small>3 months ago</small></div>
          </td>
          <td class="text-start">
            200000
          </td>
          <td class="text-start">
            transactions
          </td>
        </tr>
        <tr class="">
          <td class="text-start"><span class="v-tooltip v-tooltip--top"><!----></span> <a href="/block/1" class="">1</a></td>
          <td class="text-start">
            <div class="my-2 text-left">
              05/06 7:11:26 PM<br> <small>3 months ago</small></div>
          </td>
          <td class="text-start">
            100000
          </td>
          <td class="text-start">
            transactions
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div class="v-data-footer">
    <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
        <div class="v-input__control">
          <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-36" class="v-input__slot">
            <div class="v-select__slot">
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-36" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
              </div><input type="hidden" value="10">
            </div>
            <div class="v-menu">
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-data-footer__pagination"></div>
    <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
    <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
  </div>
</div>
`;

exports[`BlockList.vue Should show the blocks list 1`] = `
<div class="v-data-table v-data-table--has-bottom theme--light">
  <div class="v-data-table__wrapper">
    <table>
      <colgroup>
        <col class="">
        <col class="">
        <col class="">
        <col class="">
      </colgroup>
      <thead class="v-data-table-header">
        <tr>
          <th role="columnheader" scope="col" aria-label="Block: Sorted descending. Activate to sort ascending." aria-sort="descending" class="text-start sortable active desc"><span>Block</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="Mined On: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Mined On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="Gas Used" class="text-start"><span>Gas Used</span></th>
          <th role="columnheader" scope="col" aria-label="Transaction Count" class="text-start"><span>Transaction Count</span></th>
        </tr>
      </thead>
      <tbody>
        <tr class="">
          <td class="text-start"><span class="v-tooltip v-tooltip--top"><!----></span> <a href="/block/2" class="">2</a></td>
          <td class="text-start">
            <div class="my-2 text-left">
              05/06 7:11:26 PM<br> <small>3 months ago</small></div>
          </td>
          <td class="text-start">
            200000
          </td>
          <td class="text-start">
            transactions
          </td>
        </tr>
        <tr class="">
          <td class="text-start"><span class="v-tooltip v-tooltip--top"><!----></span> <a href="/block/1" class="">1</a></td>
          <td class="text-start">
            <div class="my-2 text-left">
              05/06 7:11:26 PM<br> <small>3 months ago</small></div>
          </td>
          <td class="text-start">
            100000
          </td>
          <td class="text-start">
            transactions
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div class="v-data-footer">
    <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
        <div class="v-input__control">
          <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-60" class="v-input__slot">
            <div class="v-select__slot">
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-60" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
              </div><input type="hidden" value="10">
            </div>
            <div class="v-menu">
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-data-footer__pagination">1-2 of 2</div>
    <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
    <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
  </div>
</div>
`;

exports[`BlockList.vue should show the loading message when empty blocks list 1`] = `
<div class="v-data-table v-data-table--has-bottom theme--light">
  <div class="v-data-table__wrapper">
    <table>
      <colgroup>
        <col class="">
        <col class="">
        <col class="">
        <col class="">
      </colgroup>
      <thead class="v-data-table-header">
        <tr>
          <th role="columnheader" scope="col" aria-label="Block: Sorted descending. Activate to sort ascending." aria-sort="descending" class="text-start sortable active desc"><span>Block</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="Mined On: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Mined On</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
          <th role="columnheader" scope="col" aria-label="Gas Used" class="text-start"><span>Gas Used</span></th>
          <th role="columnheader" scope="col" aria-label="Transaction Count" class="text-start"><span>Transaction Count</span></th>
        </tr>
      </thead>
      <tbody>
        <tr class="v-data-table__empty-wrapper">
          <td colspan="4">
            No blocks found
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div class="v-data-footer">
    <div class="v-data-footer__select">Rows per page:<div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select">
        <div class="v-input__control">
          <div role="button" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-84" class="v-input__slot">
            <div class="v-select__slot">
              <div class="v-select__selections">
                <div class="v-select__selection v-select__selection--comma">10</div><input aria-label="Rows per page:" id="input-84" readonly="readonly" type="text" aria-readonly="false" autocomplete="off">
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-menu-down theme--light"></i></div>
              </div><input type="hidden" value="10">
            </div>
            <div class="v-menu">
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-data-footer__pagination">–</div>
    <div class="v-data-footer__icons-before"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Previous page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-left theme--light"></i></span></button></div>
    <div class="v-data-footer__icons-after"><button type="button" disabled="disabled" class="v-btn v-btn--disabled v-btn--icon v-btn--round v-btn--text theme--light v-size--default" aria-label="Next page"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-right theme--light"></i></span></button></div>
  </div>
</div>
`;
